name:                servant-snap-reflex
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Servant.Snap.Reflex
                     , Servant.Snap.Reflex.Comms
                     , Servant.Snap.Reflex.Comms.Serial
                     , Servant.Snap.Reflex.Comms.Parallel
                     , Servant.Snap.Reflex.Util
  build-depends:       base >=4.9 && <4.10
                     , mtl >=2.2 && <2.3
                     , primitive >=0.6 && <0.7
                     , hashable >=1.2 && <1.3
                     , stm >=2.4 && <2.5
                     , ttrie
                     , dependent-sum
                     , ref-tf
                     , reflex
                     , snap
                     , snap-core
                     , snap-server
                     , servant 
                     , servant-snap
                     , http-api-data
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
